--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 # gitignore contributors: remember to update Global/Xcode.gitignore, Objective-C.gitignore & Swift.gitignore
 
 .DS_Store
-GoogleService-Info.plist
+ReviewSchool/ReviewSchool/GoogleService-Info.plist
 
 ## User settings
 xcuserdata/
