lazy loading + rxswift debounce

--- a/ReviewSchool/Podfile
+++ b/ReviewSchool/Podfile
@@ -9,4 +9,6 @@ target 'ReviewSchool' do
   pod 'Firebase/Auth'
   pod 'FirebaseFirestoreSwift'
   pod 'Firebase/Storage'
+  pod "RxSwift"
+  pod "RxCocoa"
 end
